------------------------------------------------------------------------
r2206 | gaser | 2023-05-11 12:08:58

Changed paths:
 M CHANGES.txt
 M cat_vol_eidist.m
AM cat_vol_inpaint.m
 M doc/index.html

Changed: Updated help text.
Added:   New function cat_vol_inpaint for inpainting of missing values.
------------------------------------------------------------------------
r2205 | rdahnke | 2023-05-08 09:34:57

Changed paths:
 M CHANGES.txt
 M cat_io_csv.m
 M cat_io_report.m
 M cat_main_reportfig.m

Fixed:   Corrected bug in cat_io_csv to read real NaNs.
Fixed:   Corrected bug in cat_io_report.   
Changed: Setup blood vessel output in cat_main_reportfig.
------------------------------------------------------------------------
r2201 | rdahnke | 2023-05-06 11:00:21

Changed paths:
 M CHANGES.txt

New:      Added min-max-based gray-scaled operations in cat_vol_morph.  
New:      Added new blood-vessel-detection in cat_vol_partvol1639 that 
          is controlled by the extopts.experimental parameter in the 
          developer mode.
Changed:  Optimized blood-vessel-correction in cat_main1639.  
------------------------------------------------------------------------
r2200 | gaser | 2023-05-04 16:48:07

Changed paths:
 M CHANGES.txt
 M cat_vol_tfce.m

Changed: Updated help text for cat_vol_tfce.m and set defaults for E and H.
------------------------------------------------------------------------
r2199 | gaser | 2023-05-04 13:52:45

Changed paths:
 M CHANGES.txt
 M Makefile
AM cat_vol_tfce.m
A  tfceMex_pthread.c
AM tfceMex_pthread.m
A  tfceMex_pthread.mexa64
A  tfceMex_pthread.mexmaca64
A  tfceMex_pthread.mexmaci64
A  tfceMex_pthread.mexw64

Added:   Added new function ca_vol_tfce.m that allows to apply threshold-free
         cluster enhancement (TFCE) and scale the image to have the same
         intensity distribution as the input.
Added:   Added tfceMex_pthread.* from TFCE toolbox.
------------------------------------------------------------------------